--- a/gallery.ejs
+++ b/gallery.ejs
@@ -1,17 +1,18 @@
 <% 
-const postsByYearMonth = items.reduce((acc, item) => {
-  const date = new Date(item.date);
-  const yearMonth = `${date.getFullYear()}-${String(date.getMonth() + 1).padStart(2, '0')}`; // Format as "YYYY-MM"
-  acc[yearMonth] = acc[yearMonth] || [];
-  acc[yearMonth].push(item);
-  return acc;
+const postsByYear = items.reverse().reduce((acc, item) => {
+    const date = new Date(item.date);
+    const year = `${date.getFullYear()}`; // Group by year
+    acc[year] = acc[year] || [];
+    acc[year].push(item);
+    return acc;
 }, {});
 %>
 
-<% Object.keys(postsByYearMonth).sort((a, b) => b.localeCompare(a)).forEach(yearMonth => { %>
-  <h2><%= yearMonth %></h2>
+
+<% Object.keys(postsByYear).sort((a, b) => b.localeCompare(a)).forEach(year => { %>
+  <h2><%= year %></h2>
   <ul>
-    <% postsByYearMonth[yearMonth].forEach(item => { %>
+    <% postsByYear[year].forEach(item => { %>
       <li><a href="<%- item.path %>"><%= item.title %></a></li>
     <% }) %>
   </ul>
